force-app/main/default/objects/IA_2_0_Data_Collection__c/IA_2_0_Data_Collection__c.object-meta.xml
<CustomObject>
    <description>Object used to collect data for IA 2.0 conversion</description>
    <label>IA 2.0 Data Collection</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>IA 2.0 Data Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IA 2.0 Data Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>