force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Accessories_on_Payroll_Deduct_Temp__c.field-meta.xml
<CustomField>
    <fullName>Accessories_on_Payroll_Deduct_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Accessories on Payroll Deduct - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>