force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Accessory_Name_Temp__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Name_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Accessory Name - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insoles</fullName>
            </value>
            <value>
                <fullName>Socks</fullName>
            </value>
            <value>
                <fullName>Footwear Care Products</fullName>
            </value>
            <value>
                <fullName>Other - see notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>