force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Account_Handling_Temp__c.field-meta.xml
<CustomField>
    <fullName>Account_Handling_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Account Handling - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>NA/DTI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>