force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/BIll_to_Addess_Temp__c.field-meta.xml
<CustomField>
    <fullName>BIll_to_Addess_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>BIll-to Addess - Temp</label>
    <type>TextArea</type>
</CustomField>