force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Bill_to_Email_Address_Temp__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Email_Address_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Bill-to Email Address - Temp</label>
    <type>Email</type>
</CustomField>