force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/CC_Bill_to_Email_Address_Temp__c.field-meta.xml
<CustomField>
    <fullName>CC_Bill_to_Email_Address_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>CC Bill-to Email Address - Temp</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>