force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Chemical_Rating_Temp__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Rating_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Chemical Rating - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Good_Better_Best</valueSetName>
    </valueSet>
</CustomField>