force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Color_Temp__c.field-meta.xml
<CustomField>
    <fullName>Color_Temp__c</fullName>
    <description>iA 2.0 Conversion data</description>
    <label>Color - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Black-Green</fullName>
            </value>
            <value>
                <fullName>Black-Orange</fullName>
            </value>
            <value>
                <fullName>Black-Purple</fullName>
            </value>
            <value>
                <fullName>Black-Yellow</fullName>
            </value>
            <value>
                <fullName>Blue-Yellow</fullName>
            </value>
            <value>
                <fullName>Brown-Beige</fullName>
            </value>
            <value>
                <fullName>Brown-Camo</fullName>
            </value>
            <value>
                <fullName>Brown-Green</fullName>
            </value>
            <value>
                <fullName>Brown-Harvest Gold</fullName>
            </value>
            <value>
                <fullName>Brown-Olive Green</fullName>
            </value>
            <value>
                <fullName>Brown-Orange</fullName>
            </value>
            <value>
                <fullName>Brown-Pink</fullName>
            </value>
            <value>
                <fullName>Brown-Red</fullName>
            </value>
            <value>
                <fullName>Brown-Tan</fullName>
            </value>
            <value>
                <fullName>Dark Brown</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
            <value>
                <fullName>Gray-Black</fullName>
            </value>
            <value>
                <fullName>Gray-Blue</fullName>
            </value>
            <value>
                <fullName>Gray-Green</fullName>
            </value>
            <value>
                <fullName>Gray-Orange</fullName>
            </value>
            <value>
                <fullName>Gray-Pink</fullName>
            </value>
            <value>
                <fullName>Gray-Purple</fullName>
            </value>
            <value>
                <fullName>Gray-Red</fullName>
            </value>
            <value>
                <fullName>Green-Black</fullName>
            </value>
            <value>
                <fullName>Maroon</fullName>
            </value>
            <value>
                <fullName>Navy-Orange</fullName>
            </value>
            <value>
                <fullName>Navy-Brown</fullName>
            </value>
            <value>
                <fullName>Oro-Russet</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>