force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Country_of_Origin_Temp__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Country of Origin - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assembled in the USA with imported components</fullName>
            </value>
            <value>
                <fullName>Made in Cambodia</fullName>
            </value>
            <value>
                <fullName>Made in China</fullName>
            </value>
            <value>
                <fullName>Made in the USA with imported materials</fullName>
            </value>
            <value>
                <fullName>Made in USA</fullName>
            </value>
            <value>
                <fullName>Made in Vietnam</fullName>
            </value>
            <value>
                <fullName>#N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>