force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/CY_Pricing_Temp__c.field-meta.xml
<CustomField>
    <fullName>CY_Pricing_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <inlineHelpText>Calendar Year = CY</inlineHelpText>
    <label>CY Pricing - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>