force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Daily_What_days_Temp__c.field-meta.xml
<CustomField>
    <fullName>Daily_What_days_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Daily: What days? - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday - Friday</fullName>
            </value>
            <value>
                <fullName>Monday - Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>