force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Employee_Option_Payroll_Deduct_Temp__c.field-meta.xml
<CustomField>
    <fullName>Employee_Option_Payroll_Deduct_Temp__c</fullName>
    <description>Temp IA 2.0 Conversion</description>
    <label>Employee Option Payroll Deduct - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>