force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/ESD_Electro_Static_Dissappative_Temp__c.field-meta.xml
<CustomField>
    <fullName>ESD_Electro_Static_Dissappative_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>ESD-Electro-Static Dissappative-Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>