force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Gender_Temp__c.field-meta.xml
<CustomField>
    <fullName>Gender_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Gender - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>