force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Hand_Pick_Exceptions_Temp__c.field-meta.xml
<CustomField>
    <fullName>Hand_Pick_Exceptions_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Hand Pick Exceptions - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>