force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Hand_Pick_Style_Number_Exc_Temp__c.field-meta.xml
<CustomField>
    <fullName>Hand_Pick_Style_Number_Exc_Temp__c</fullName>
    <description>Excluded Hand Picked Styles _ Temp field for IA 2.0 Conversion</description>
    <inlineHelpText>Excluded - enter multiple style numbers separated by comma</inlineHelpText>
    <label>Hand Pick Style Number (Exc) - Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>