force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Hand_Pick_Style_Number_Inc_Temp__c.field-meta.xml
<CustomField>
    <fullName>Hand_Pick_Style_Number_Inc_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <inlineHelpText>Include Styles - Enter multiple separated by comma 2210,5555,7890,4445</inlineHelpText>
    <label>Hand Pick Style Number (Inc) - Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>