force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Heel_Height_in_inches_Temp__c.field-meta.xml
<CustomField>
    <fullName>Heel_Height_in_inches_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Heel Height in inches - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1/4</fullName>
            </value>
            <value>
                <fullName>3/8</fullName>
            </value>
            <value>
                <fullName>1/2</fullName>
            </value>
            <value>
                <fullName>3/4</fullName>
            </value>
            <value>
                <fullName>7/8</fullName>
            </value>
            <value>
                <fullName>9/16</fullName>
            </value>
            <value>
                <fullName>5/8</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>1 1/8</fullName>
            </value>
            <value>
                <fullName>1 1/4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>