force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Heel_Temp__c.field-meta.xml
<CustomField>
    <fullName>Heel_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Heel-Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>