force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Height_Temp__c.field-meta.xml
<CustomField>
    <fullName>Height_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Height - Temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>Chuka</fullName>
            </value>
            <value>
                <fullName>Hiker</fullName>
            </value>
            <value>
                <fullName>Mid High</fullName>
            </value>
            <value>
                <fullName>Oxford</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>