force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/IA_1_0_Program_ID_Temp__c.field-meta.xml
<CustomField>
    <fullName>IA_1_0_Program_ID_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>IA 1.0 Program ID - Temp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>