force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/IA_Account_Name_temp__c.field-meta.xml
<CustomField>
    <fullName>IA_Account_Name_temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>IA Account Name - temp</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IA 2.0 Data Collections</relationshipLabel>
    <relationshipName>IA_2_0_Data_Collections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>