force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Invoice_By_temp__c.field-meta.xml
<CustomField>
    <fullName>Invoice_By_temp__c</fullName>
    <description>Temp for IA 2.0 Conversion</description>
    <label>Invoice By - temp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Name</fullName>
            </value>
            <value>
                <fullName>Last Name</fullName>
            </value>
            <value>
                <fullName>Employee ID</fullName>
            </value>
            <value>
                <fullName>Manager Name</fullName>
            </value>
            <value>
                <fullName>Discrepancy - Not in List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>