force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Invoice_Due_Date_Temp__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Invoice Due Date - Temp</label>
    <type>Date</type>
</CustomField>