force-app/main/default/objects/IA_2_0_Data_Collection__c/fields/Invoicing_Attributes12_Temp__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Attributes12_Temp__c</fullName>
    <description>Temp field for IA 2.0 conversion</description>
    <label>Invoicing Attributes12 - Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auth form #</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Cost Center</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Discrepancy - not in list</fullName>
            </value>
            <value>
                <fullName>District #</fullName>
            </value>
            <value>
                <fullName>Employee ID</fullName>
            </value>
            <value>
                <fullName>Job/Group #</fullName>
            </value>
            <value>
                <fullName>Job/Group Name</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Plant #</fullName>
            </value>
            <value>
                <fullName>Purchase order #</fullName>
            </value>
            <value>
                <fullName>Ticket/Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>